--- a/src/embassy-access-worker/appsettings.yml
+++ b/src/embassy-access-worker/appsettings.yml
@@ -1,10 +1,3 @@
 # @format
 
-Logging:
-  LogLevel:
-    Default: Debug
-
-Persistence:
-  FileSystem: data
-  Encryption:
-    Key: "e3b0c442-98fc-1c14-9afc-4c6f8d2a1e7b"
+Version: '1.0'
