--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -19,6 +19,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="attributes\NameAttribute.fs" />
+    <Compile Include="examples\AttributeUsage.fs" />
     <Compile Include="dependencies\Configuration.fs" />
     <Compile Include="dependencies\Persistence.fs" />
     <Compile Include="dependencies\embassies\Common.fs" />
