--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Compile Include="attributes\NameAttribute.fs" />
     <Compile Include="examples\AttributeUsage.fs" />
+    <Compile Include="examples\TreeBuildingStyles.fs" />
     <Compile Include="dependencies\Configuration.fs" />
     <Compile Include="dependencies\Persistence.fs" />
     <Compile Include="dependencies\embassies\Common.fs" />
