Refactor: Update Docker Compose and PostgreSQL storage implementations for consistency and clarity

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,59 +1,61 @@
 ﻿services:
   
-  ea-worker:
-    image: ea-worker
-    container_name: ea-worker
-    build:
-      context: ../
-      dockerfile: ./src/embassy-access-worker/Dockerfile
-    depends_on:
-      - ea-postgres
-      - browser-webapi
-    environment:
-      - LOG_LEVEL=info
-      - POSTGRES_CONNECTION=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@ea-postgres:${POSTGRES_PORT}/${POSTGRES_DB}
-      - BROWSER_WEBAPI_URL=http://browser-webapi:${BROWSER_WEBAPI_PORT}
-      - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
-      - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
-    networks:
-      - ea-network
+  # ea-worker:
+  #   image: ea-worker
+  #   container_name: ea-worker
+  #   build:
+  #     context: ../
+  #     dockerfile: ./src/embassy-access-worker/Dockerfile
+  #   depends_on:
+  #     - ea-postgres
+  #     - browser-webapi
+  #   environment:
+  #     - LOG_LEVEL=info
+  #     - POSTGRES_CONNECTION=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@ea-postgres:${POSTGRES_PORT}/${POSTGRES_DB}
+  #     - BROWSER_WEBAPI_URL=http://browser-webapi:${BROWSER_WEBAPI_PORT}
+  #     - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
+  #     - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
+  #   networks:
+  #     - ea-network
 
-  ea-telegram:
-    image: ea-telegram
-    container_name: ea-telegram
-    build:
-      context: ../
-      dockerfile: ./src/embassy-access-telegram/Dockerfile
-    depends_on:
-      - ea-postgres
-    environment:
-      - LOG_LEVEL=info
-      - POSTGRES_CONNECTION=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@ea-postgres:${POSTGRES_PORT}/${POSTGRES_DB}
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
-    networks:
-      - ea-network
+  # ea-telegram:
+  #   image: ea-telegram
+  #   container_name: ea-telegram
+  #   build:
+  #     context: ../
+  #     dockerfile: ./src/embassy-access-telegram/Dockerfile
+  #   depends_on:
+  #     - ea-postgres
+  #   environment:
+  #     - LOG_LEVEL=info
+  #     - POSTGRES_CONNECTION=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@ea-postgres:${POSTGRES_PORT}/${POSTGRES_DB}
+  #     - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+  #     - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
+  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #     - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
+  #   networks:
+  #     - ea-network
 
-  browser-webapi:
-    image: ponkorn/browser-webapi:1.0.0
-    container_name: browser-webapi
-    ports:
-      - 8080:8080
-    environment:
-      - SERVER_HOST=0.0.0.0
-      - SERVER_PORT=${BROWSER_WEBAPI_PORT}
-      - USE_UI=false
-      - BINARY_DATA_DIR=/usr/bin/chromium-browser
-      - USER_DATA_DIR=/tmp/chrome_temp
-      - IDLE_TIMEOUT_DAYS=365
-    networks:
-      - ea-network
+  # browser-webapi:
+  #   image: ponkorn/browser-webapi:1.0.0
+  #   container_name: browser-webapi
+  #   ports:
+  #     - 8080:8080
+  #   environment:
+  #     - SERVER_HOST=0.0.0.0
+  #     - SERVER_PORT=${BROWSER_WEBAPI_PORT}
+  #     - USE_UI=false
+  #     - BINARY_DATA_DIR=/usr/bin/chromium-browser
+  #     - USER_DATA_DIR=/tmp/chrome_temp
+  #     - IDLE_TIMEOUT_DAYS=365
+  #   networks:
+  #     - ea-network
 
   ea-postgres:
     image: postgres:17
     container_name: ea-postgres
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
