Refactor: Update PostgreSQL connection string format in Docker Compose for consistency

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -11,7 +11,7 @@
   #     - browser-webapi
   #   environment:
   #     - LOG_LEVEL=info
-  #     - POSTGRES_CONNECTION=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@ea-postgres:${POSTGRES_PORT}/${POSTGRES_DB}
+  #     - POSTGRES_CONNECTION=Server=ea-postgres;Port=${POSTGRES_PORT};Database=${POSTGRES_DB};User Id=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
   #     - BROWSER_WEBAPI_URL=http://browser-webapi:${BROWSER_WEBAPI_PORT}
   #     - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
   #     - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
@@ -28,7 +28,7 @@
   #     - ea-postgres
   #   environment:
   #     - LOG_LEVEL=info
-  #     - POSTGRES_CONNECTION=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@ea-postgres:${POSTGRES_PORT}/${POSTGRES_DB}
+  #     - POSTGRES_CONNECTION=Server=ea-postgres;Port=${POSTGRES_PORT};Database=${POSTGRES_DB};User Id=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
   #     - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
   #     - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
   #     - OPENAI_API_KEY=${OPENAI_API_KEY}
