Refactor: Enhance resource cleanup logic in Italian and Russian modules, add VSCode configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -292,7 +292,9 @@ paket-files/
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
-
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 
 ### OSX ###
