Refactor embassy access worker configuration and tasks
- Simplified the configuration loading in Program.fs to only include appsettings.yml.
- Updated appsettings.yml to include detailed task configurations for various embassies.
- Removed the obsolete worker-tasks-tree.yml file as its content has been integrated into appsettings.yml.
- Adjusted the project file to remove references to the deleted worker-tasks-tree.yml.
- Updated submodule fsharp-ai-provider to the latest commit.
- Added new data files for embassies and services in the embassy-access-telegram module.
- Introduced new dependencies for Client, Culture, Persistence, Request, and Web modules in the embassy-access-telegram project.

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -36,20 +36,20 @@
   #   networks:
   #     - ea-network
 
-  # browser-webapi:
-  #   image: ponkorn/browser-webapi:1.0.0
-  #   container_name: browser-webapi
-  #   ports:
-  #     - 8080:8080
-  #   environment:
-  #     - SERVER_HOST=0.0.0.0
-  #     - SERVER_PORT=${BROWSER_WEBAPI_PORT}
-  #     - USE_UI=false
-  #     - BINARY_DATA_DIR=/usr/bin/chromium-browser
-  #     - USER_DATA_DIR=/tmp/chrome_temp
-  #     - IDLE_TIMEOUT_DAYS=365
-  #   networks:
-  #     - ea-network
+  browser-webapi:
+    image: ponkorn/browser-webapi:1.0.0
+    container_name: browser-webapi
+    ports:
+      - 8080:8080
+    environment:
+      - SERVER_HOST=0.0.0.0
+      - SERVER_PORT=${BROWSER_WEBAPI_PORT}
+      - USE_UI=false
+      - BINARY_DATA_DIR=/usr/bin/chromium-browser
+      - USER_DATA_DIR=/tmp/chrome_temp
+      - IDLE_TIMEOUT_DAYS=365
+    networks:
+      - ea-network
 
   ea-postgres:
     image: postgres:17
