Refactor: Update launch configuration to include environment file; modify ProjectId in OpenAI client initialization; enhance subscription handling in Entity and Chat modules; optimize SQL query in Postgre module; update fsharp-ai-provider submodule reference.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "program": "${workspaceFolder}/src/embassy-access-telegram/bin/Debug/net10.0/embassy-access-telegram.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/embassy-access-telegram",
+            "envFile": "${workspaceFolder}/src/embassy-access-telegram/.env",
             "stopAtEntry": false,
             "console": "internalConsole"
         },
@@ -20,6 +21,7 @@
             "program": "${workspaceFolder}/src/embassy-access-telegram/bin/Release/net10.0/embassy-access-telegram.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/embassy-access-telegram",
+            "envFile": "${workspaceFolder}/src/embassy-access-telegram/.env",
             "stopAtEntry": false,
             "console": "internalConsole"
         },
