Refactor: Update docker-compose.yml to use environment variable for browser-webapi port; update README.md for .NET version and contact information; update fsharp-web submodule reference.

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -41,7 +41,7 @@
     image: ponkorn/browser-webapi:1.0.0
     container_name: browser-webapi
     ports:
-      - 8080:8080
+      - 8080:${BROWSER_WEBAPI_PORT}
     environment:
       - SERVER_HOST=0.0.0.0
       - SERVER_PORT=${BROWSER_WEBAPI_PORT}
