--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -2,8 +2,8 @@
   # docker-compose -p embassy-access up -d
   
   # worker:
-  #   image: ea-worker
-  #   container_name: ea-worker
+  #   image: embassy-access-worker
+  #   container_name: embassy-access-worker
   #   build:
   #     context: ../
   #     dockerfile: ./src/embassy-access-worker/Dockerfile
@@ -17,11 +17,11 @@
   #     - ANTICAPTCHA_API_KEY=${ANTICAPTCHA_API_KEY}
   #     - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
   #   networks:
-  #     - ea-network
+  #     - embassy-access-network
 
   # telegram:
-  #   image: ea-telegram
-  #   container_name: ea-telegram
+  #   image: embassy-access-telegram
+  #   container_name: embassy-access-telegram
   #   build:
   #     context: ../
   #     dockerfile: ./src/embassy-access-telegram/Dockerfile
@@ -35,10 +35,10 @@
   #     - OPENAI_API_KEY=${OPENAI_API_KEY}
   #     - DATA_ENCRYPTION_KEY=${DATA_ENCRYPTION_KEY}
   #   networks:
-  #     - ea-network
+  #     - embassy-access-network
 
   browser-webapi:
-    image: ponkorn/browser-webapi:1.0.0
+    image: ponkorn/browser-webapi:latest
     container_name: browser-webapi
     ports:
       - 8080:${BROWSER_WEBAPI_PORT}
@@ -50,39 +50,39 @@
       - USER_DATA_DIR=/tmp/chrome_temp
       - IDLE_TIMEOUT_DAYS=365
     networks:
-      - ea-network
+      - embassy-access-network
 
   postgres:
     image: postgres:17
-    container_name: ea-postgres
+    container_name: embassy-access-postgres
     ports:
-      - "5432:5432"
+      - 5432:5432
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ea
+      POSTGRES_USER: ea
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres-volume:/var/lib/postgresql/data
     networks:
-      - ea-network
+      - embassy-access-network
 
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: ea-pgadmin
+    container_name: embassy-access-pgadmin
     ports:
-      - "8081:80"
+      - 8081:80
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
     depends_on:
       - postgres
     networks:
-      - ea-network
+      - embassy-access-network
     volumes:
       - pgadmin-volume:/var/lib/pgadmin
 
 networks:
-  ea-network:
+  embassy-access-network:
     driver: bridge
 
 volumes:
