--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="embassies\Russian.fs" />
     <Compile Include="embassies\Italian.fs" />
     <Compile Include="Initializer.fs" />
+    <Compile Include="Handlers.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
